--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" description="Web app that allows the user to search for the current weather and 5-day forecast for locations all over the world." />
+    <meta name="description" content="Web app that allows the user to search for the current weather and 5-day forecast for locations all over the world." />
     <title>World Wide Weather</title>
     <link rel="stylesheet" href="/public/layout.css" />
     <link rel="stylesheet" href="/public/media-queries.css" />
